# alpha-lab

./: .gitignore  CLAUDE.md  DEPLOYMENT_MANIFEST.md  HANDOFF.md  README.md  STATUS.md  dashboard.html  pyproject.toml
audit-bundle/: 00-README-manifest.md  03-CODE.md  04-RECOMPUTE.md  05-residual-return-series.csv  05b-pairs-return-series.csv  com.rimrim.alpha-lab-paper.plist.disabled  com.rimrim.hunt2026-paper.plist.disabled
memos/: 2026-07-11-canonical-review.md  2026-07-11-independent-ops-audit.md  CLEAN_CYCLE_REPORT_2026-07-13.md  CLEAN_CYCLE_REPORT_TEMPLATE.md  alpha-forward-setup-2026-07-14.md  alpha-roadmap-2026-07.md  band-ruling-2026-07-21.md  diagnostics-2026-07-10.md  hunt2026-benchmark-and-cost-review-2026-07-21.md  hunt2026-verdict.md  independent-alpha-program-2026-07-10.md  mc-account-isolation-cutover-2026-07-15.md  mc-drag-flag-2026-07-16.md  paper-status-proposal-2026-07-11.md
notebooks/: statarb_research.ipynb  statarb_research.py
reports/: statarb_paper_live_tearsheet.html  statarb_tearsheet_all_on.html  statarb_tearsheet_costs.html  statarb_tearsheet_costs.note.txt  tearsheet.py
scripts/: asset_growth_run.py  build_dashboard.py  gkx_pc_timing_run.py  gkx_run.py  hunt_paper_reconcile.py  hunt_paper_run.py  llm_sentiment_run.py  paper_book_run.py  paper_status.py  pead_run.py  statarb_ablation_run.py  statarb_residual_run.py  statarb_run.py
tests/: test_broker.py  test_gkx.py  test_mc_isolation.py  test_neutralize.py  test_paper.py  test_paper_panel.py  test_paper_status.py  test_pead.py  test_prices.py  test_reconcile.py  test_statarb.py  (+3 more)
(+314 files in other folders)
